--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -37,5 +38,7 @@
       <img src="img/loader.gif" alt="" />
     </div>
     <script src="main.js"></script>
+
+    <!-- Copyright HololiveTv -->
   </body>
 </html>
