update using class

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="img/loader.gif" alt="" />
       </div>
     </div>
-    <script src="main.js"></script>
+    <script src="src/index.js" type="module"></script>
 
     <!-- Copyright HololiveTv -->
   </body>
