update path name

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600;700&display=swap" rel="stylesheet" />
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Kobokan App</title>
   </head>
   <body>
     <div class="container">
       <div class="herosection">
-        <img src="img/kobo.svg" alt="Kobo Kanaeru" />
+        <img src="src/img/kobo.svg" alt="Kobo Kanaeru" />
         <div class="search-container">
           <input type="text" id="search" class="input-keyword" name="search" placeholder="Search city..." />
           <button class="search-button">Search</button>
@@ -26,7 +26,7 @@
       </div>
       <div class="card-container"></div>
       <div class="loader-container">
-        <img src="img/loader.gif" alt="" />
+        <img src="src/img/loader.gif" alt="" />
       </div>
     </div>
     <script src="src/index.js" type="module"></script>
